--- a/vuebnb-prototype/index.html
+++ b/vuebnb-prototype/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Vuebnb</title>
   <link rel="stylesheet" href="node_modules/open-sans-all/css/open-sans.css">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -14,8 +15,46 @@
   <h1>vuebnb</h1>
 </div>
 <div id="app">
-  <div class="container"></div>
+  <div class="header">
+  	<div class="header-img" v-bind:style="headerImageStyle"></div>
+  </div>
+  <div class="container">
+  	<div class="heading">
+  		<h1>{{ title }}</h1>
+  		<p>{{ address }}</p>
+  	</div>
+  	<div class="about">
+  		<h3>About this listing</h3>
+  		<p class="contracted">{{ about }}</p>
+  		<button class="more">+ More</button>
+  	</div>
+  	<div class="lists">
+  		<hr>
+  		<div class="amenities list">
+  			<div class="title"><strong>Amenities</strong></div>
+  			<div class="content">
+  				<div class="list-item" v-for="amenity in amenities">
+  					<i class="fa fa-lg" v-bind:class="amenity.icon"></i>
+  					<span>{{ amenity.title }}</span>
+  				</div>
+  			</div>
+  		</div>
+  		<hr>
+  		<div class="prices list">
+  			<div class="title">
+  				<strong>Prices</strong>
+  			</div>
+  			<div class="content">
+  				<div class="list-item" v-for="price in prices">
+  					{{ price.title }}: <strong>{{ price.value }}</strong>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
 </div>
+<script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
+<script type="text/javascript" src="sample/data.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
