continue update on chapter 02

--- a/vuebnb-prototype/index.html
+++ b/vuebnb-prototype/index.html
@@ -25,8 +25,8 @@
   	</div>
   	<div class="about">
   		<h3>About this listing</h3>
-  		<p class="contracted">{{ about }}</p>
-  		<button class="more">+ More</button>
+  		<p v-bind:class="{ contracted: contracted }">{{ about }}</p>
+  		<button v-if="contracted" class="more" v-on:click="contracted=false">+ More</button>
   	</div>
   	<div class="lists">
   		<hr>
