--- a/vuebnb-prototype/index.html
+++ b/vuebnb-prototype/index.html
@@ -16,7 +16,8 @@
 </div>
 <div id="app">
   <div class="header">
-  	<div class="header-img" v-bind:style="headerImageStyle"></div>
+  	<div class="header-img" v-bind:style="headerImageStyle" v-on:click="modalOpen = true"></div>
+    <button class="view-photos">View Photos</button>
   </div>
   <div class="container">
   	<div class="heading">
@@ -51,6 +52,12 @@
   			</div>
   		</div>
   	</div>
+    <div id="modal" v-bind:class="{ show: modalOpen }">
+      <button v-on:click="modalOpen = false" class="modal-close">&times;</button>
+      <div class="modal-content">
+        <img src="sample/header.jpg"/>
+      </div>
+    </div>
   </div>
 </div>
 <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
